# vstd

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build.zig  error.c  flake.nix  testing.c
.agents/agents/: code-reviewer.md  docs-benchmark-sync.md
.agents/references/: api-consistency-checklist.md  benchmark-doc-checklist.md
.agents/skills/: README.md
.agents/skills/api-consistency/: SKILL.md
.agents/skills/benchmark-doc-sync/: SKILL.md
.agents/skills/using-agent-skills/: SKILL.md
.agents/skills/writing-git-commits/: SKILL.md
.github/: README.md  dependabot.yml
.github/scripts/: validate-commits.sh  validate-naming.sh
.github/workflows/: docs.yml  flake.yml  pre-merge.yml  release.yml
allocators/: arena.c  general_heap.c  size.h
benchmarks/: binary_heap_bench.c  hashmap_bench.c  queue_push_pop_bench.c
cmake/: install.cmake  tests.cmake
datastruct/: deque.c  string.c  vector.c
docs/: mkdocs.yml  zensical.toml
docs-site/: mkdocs.yml
docs-site/docs/: benchmarks.md
docs-site/docs/data-structures/: binary-heap.md  linked-list.md  queue.md  vector.md
docs-site/docs/reference/: cstd-datastruct.md  cstd-status.md
docs-site/docs/stylesheets/: extra.css
docs/docs/: benchmarks.md  index.md
docs/docs/allocators/: arena.md  general-heap.md  overview.md  test-allocator.md  utils.md
docs/docs/buffer/: cursor.md
docs/docs/data-structures/: binary-heap.md  deque.md  doubly-linked-list.md  hashmap.md  hashset.md  iterator.md  linked-list.md  string.md  vector.md
docs/docs/datastruct/: binary-heap.md  deque.md  doubly-linked-list.md  iterator.md  linked-list.md  string.md  vector.md
docs/docs/hash/: hashset.md
docs/docs/io/: file-reader.md  file.md  reader.md
docs/docs/reference/: ckit-compare.md  ckit-mem-general-heap.md  ckit-memory-allocators.md  ckit-memory-arena.md  ckit-memory-bytes.md  ckit-memory-general-heap.md  ckit-memory-test-allocator.md  ckit-memory-utils.md  ckit-testing.md  ckit-utils.md  cstd-mem-allocator.md  cstd-mem-bytes.md  k4c-memory-allocators.md  k4c-memory-arena.md  k4c-memory-general-heap.md  k4c-memory-test-allocator.md  k4c-testing.md  vstd-assert.md  vstd-compare.md  vstd-error.md  vstd-logging.md  vstd-memory-allocators.md  vstd-memory-arena.md  vstd-memory-general-heap.md  vstd-memory-test-allocator.md  vstd-memory-utils.md  vstd-testing.md
docs/docs/stylesheets/: extra.css
hash/: common.c  common.h  hashmap.c  hashset.c
include/: status.h
include/ckit/: compare.h  panic.h  testing.h  utils.h
include/ckit/common/: panic.h
include/ckit/datastruct/: binary_heap.h  deque.h  doubly_linked_list.h  hashmap.h  hashset.h  linked_list.h  string.h  vector.h
include/ckit/memory/: bytes.h  utils.h
include/cstd/: status.h
include/cstd/datastruct/: binary_heap.h  hash_map.h  linked_list.h
include/datastruct/: queue.h  vector.h
include/k4c/allocators/: allocator.h  (+4 more)
include/vstd/: assert.h  compare.h  error.h  logging.h  panic.h  testing.h
lib/: assert.c  logging.c
lib/buffer/: cursor.c
lib/datastruct/: binary_heap.c  deque.c  doubly_linked_list.c  iterator.c  linked_list.c  string.c  vector.c
lib/hash/: common.c  common.h  fnv.h  hashmap.c  hashset.c
lib/io/: file.c
lib/mem/: allocator.c  arena.c  general_heap.c  test_allocator.c  utils.c
nix/: package.nix
scripts/: code-check  ctests  docs-build  format  format-check
src/: assert.c  compare.c  error.c  hash.h  logging.c  panic.c  queue.c  queue.h  testing.c  vector.h
src/buffer/: cursor.c
src/common/: compare.c  panic.c
src/crypto/: fnv1a.h
src/datastruct/: binary_heap.c  deque.c  doubly_linked_list.c  hash_common.c  hash_common.h  hashmap.c  hashset.c  iterator.c  linked_list.c  queue.c  string.c  vector.c
src/ds/: binary_heap.c  deque.c  doubly_linked_list.c  hash_common.c  hash_common.h  hashmap.c  hashset.c  iterator.c  linked_list.c  string.c  vector.c
src/io/: common.h  file.c  file_reader.c  reader.c
src/mem/: utils.h
src/memory/: allocator.c  arena.c  bytes.c  general_heap.c  test_allocator.c  utils.c  utils.h
tests/buffer/: cursor_test.c
tests/datastruct/: binary_heap_test.c  deque_test.c  doubly-linked-list_test.c  doubly_linked_list_test.c  hashmap_test.c  hashset_test.c  linked_list_test.c  string_test.c  vector_test.c
tests/ds/: binary_heap_test.c  deque_test.c  doubly_linked_list_test.c  hashmap_test.c  hashset_test.c  linked_list_test.c  string_test.c  vector_test.c
tests/hash/: hashmap_test.c  hashset_test.c
tests/io/: common.h  file_reader_test.c  file_test.c  reader_test.c
tests/logging/: logging_test.c
tooling/cmake/: benchmarks.cmake  tests.cmake
tooling/nix/: flake-module.nix  shell.nix
tools/cmake/: install.cmake  tests.cmake  vstdConfig.cmake.in
tools/nix/: package.nix
(+127 files in other folders)
